// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert displays error alert with multiple messages 1`] = `
<div
  className="usa-alert usa-alert-error"
  role="alert"
>
  <div
    className="usa-alert-body"
  >
    <h3
      className="usa-alert-heading"
    >
      Error title
    </h3>
    <p
      className="usa-alert-text"
      key="ZG9_0yeXR"
    >
      Error 1
    </p>
    <p
      className="usa-alert-text"
      key="TKqy_YSMO"
    >
      Error 2
    </p>
  </div>
</div>
`;

exports[`Alert displays info alert 1`] = `
<div
  className="usa-alert usa-alert-info"
  role={null}
>
  <div
    className="usa-alert-body"
  >
    <h3
      className="usa-alert-heading"
    >
      Info title
    </h3>
    <p
      className="usa-alert-text"
      key="p5QPrEbNt"
    >
      Alert body
    </p>
  </div>
</div>
`;

exports[`Alert displays success alert 1`] = `
<div
  className="usa-alert usa-alert-success"
  role={null}
>
  <div
    className="usa-alert-body"
  >
    <h3
      className="usa-alert-heading"
    >
      Success title
    </h3>
    <p
      className="usa-alert-text"
      key="TTzXXoihk"
    >
      Alert body
    </p>
  </div>
</div>
`;

exports[`Alert displays warning alert 1`] = `
<div
  className="usa-alert usa-alert-info"
  role={null}
>
  <div
    className="usa-alert-body"
  >
    <h3
      className="usa-alert-heading"
    >
      Warning title
    </h3>
    <p
      className="usa-alert-text"
      key="I6S_jiHWY"
    >
      Alert body
    </p>
  </div>
</div>
`;

exports[`Alert matches snapshot when isAriaLive is true 1`] = `
<div
  aria-atomic="true"
  aria-live="polite"
  className="usa-alert usa-alert-success"
  role={null}
>
  <div
    className="usa-alert-body"
  >
    <h3
      className="usa-alert-heading"
    >
      Success title
    </h3>
    <p
      className="usa-alert-text"
      key="20pwOMc5d"
    >
      Alert body
    </p>
  </div>
</div>
`;
